# cywhisper

./: .gitignore  LICENSE  README.md  __init__.py  __init__.pyi  cywhisper.pxd  cywhisper.pyx  pyproject.toml
